--- a/yamls/nginx.yaml
+++ b/yamls/nginx.yaml
@@ -5,7 +5,7 @@ metadata:
     app: nginx
   name: nginx
 spec:
-  replicas: 20
+  replicas: 1
   selector:
     matchLabels:
       app: nginx
@@ -15,5 +15,5 @@ spec:
         app: nginx
     spec:
       containers:
-      - image: httpd
-        name: test
+      - image: nginx
+        name: nginx
